--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,5 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
+- degree: Computer Science
+  year: June, 2021
+  # awards: 
   # summary:
